--- a/Practica_01/Ejercicio_4/index.html
+++ b/Practica_01/Ejercicio_4/index.html
@@ -52,7 +52,7 @@
         </p>
     </a>
     <p>
-        Para más información dirigirse a <a href=#>mail@mail.com</a>
+        Para más información dirigirse a <a href="mailto:mail@mail.com">mail@mail.com</a>
     </p>
 </body>
 </html>
