Cambio de input al tipo email

--- a/Practica_01/Ejercicio_4/index.html
+++ b/Practica_01/Ejercicio_4/index.html
@@ -33,7 +33,7 @@
         Puede realizar consultas completando el siguiente formulario:
         <br>
         <br>
-        <label>E-Mail: </label><input type="text">
+        <label>E-Mail: </label><input type="email">
         <br>
         <label>Consulta: </label><textarea>Escriba el mensaje</textarea>
         <br>
