Finalización del ejercicio 6

--- a/Practica_02/Ejercicio_6/Ejercicio_6.html
+++ b/Practica_02/Ejercicio_6/Ejercicio_6.html
@@ -3,6 +3,19 @@
 <HEAD><TITLE>Página Principal</TITLE>
 <META http-equiv=Content-Type content="text/html; charset=iso-8859-1"></META>
 <link rel="stylesheet" type="text/css" href="./Ejercicio_6.css">
+<style>
+    #pie{
+        clear:both;
+        text-align: center;
+        border: 1px solid #006666;
+        font-size: 75%;
+        color: #006666;
+        padding: 10px 10px 10px 10px;}
+    #titulo{
+        background-color: #CCFFCC;
+        margin: 5px;
+        padding: 0px 0px 10px 10px;}
+</style>
 </HEAD>
 <BODY>
     <DIV id=titulo><H1>ASIGNATURA ELECTIVA</H1></DIV>
