--- a/Practica_06/Ejercicio_02/alta.html
+++ b/Practica_06/Ejercicio_02/alta.html
@@ -8,26 +8,27 @@
     <title>Menu</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="home.html">Home</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="alta.html">Alta <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="baja.html">Baja</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="modificacion.html">Modificación</a>
-            </li>
-          </ul>
-        </div>
-    </nav>
-    <form action="alta.php" method="POST">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="home.php">Home</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="alta.html">Alta <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="baja.php">Baja</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="modificacion.php">Modificación</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+    <div class='form-group mx-sm-3 mb-2'>
+      <form action="alta.php" method="POST">
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="ciudad">Ciudad</label>
@@ -48,15 +49,15 @@
               <input type="text" class="form-control" id="superficie" name="superficie" placeholder="Superficie en m2">
             </div>
         </div>
-        <div class="form-group">
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="tiene_metro" name="tiene_metro">
-            <label class="form-check-label" for="tiene_metro">
-              Tiene metro
-            </label>
-          </div>
+        <div class='form-group'>
+          <label class='form-check-label' for='tiene_metro'> Tiene metro </label>
+          <select class='form-control' id='tiene_metro' name='tiene_metro'>
+            <option selected value='1'>SI</option>
+            <option value='0'>NO</option>
+          </select>
         </div>
         <button type="submit" class="btn btn-primary">Aceptar</button>
-    </form>
+      </form>
+    </div>
 </body>
 </html>
