--- a/Practica_06/Ejercicio_02/alta.html
+++ b/Practica_06/Ejercicio_02/alta.html
@@ -16,6 +16,9 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
+          <a class="nav-link" href="listado_pag.php">Listado Paginado</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="alta.html">Alta <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
@@ -27,7 +30,9 @@
       </ul>
     </div>
   </nav>
+  </nav>
     <div class='form-group mx-sm-3 mb-2'>
+      <h2>Alta de nueva ciudad</h2>
       <form action="alta.php" method="POST">
         <div class="form-row">
           <div class="form-group col-md-6">
